--- a/package.json
+++ b/package.json
@@ -11,8 +11,14 @@
 	},
 	"dependencies": {
 		"@tanstack/react-router": "^1.69.1",
+		"class-variance-authority": "^0.7.0",
+		"clsx": "^2.1.1",
+		"framer-motion": "^11.11.11",
+		"lucide-react": "^0.454.0",
 		"react": "^18.3.1",
-		"react-dom": "^18.3.1"
+		"react-dom": "^18.3.1",
+		"tailwind-merge": "^2.5.4",
+		"tailwindcss-animate": "^1.0.7"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.11.1",
@@ -33,6 +39,7 @@
 		"postcss": "^8.4.47",
 		"prettier": "^3.3.3",
 		"prettier-plugin-tailwindcss": "^0.6.8",
+		"shadcn": "^2.1.6",
 		"tailwindcss": "^3.4.14",
 		"typescript": "^5.5.4",
 		"typescript-eslint": "^8.7.0",
