--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@radix-ui/react-dialog": "^1.1.2",
 		"@tanstack/react-router": "^1.69.1",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
