--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
 	},
 	"dependencies": {
 		"@radix-ui/react-dialog": "^1.1.2",
+		"@radix-ui/react-slot": "^1.1.0",
 		"@tanstack/react-router": "^1.69.1",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
 		"framer-motion": "^11.11.11",
+		"lodash": "^4.17.21",
 		"lucide-react": "^0.454.0",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
@@ -25,6 +27,7 @@
 		"@eslint/js": "^9.11.1",
 		"@tanstack/router-devtools": "^1.69.1",
 		"@tanstack/router-plugin": "^1.69.1",
+		"@types/lodash": "^4.17.13",
 		"@types/react": "^18.3.10",
 		"@types/react-dom": "^18.3.0",
 		"@typescript-eslint/eslint-plugin": "^8.9.0",
