--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"prettier-plugin-tailwindcss": "^0.6.11",
 		"shadcn": "^2.3.0",
 		"tailwindcss": "^3.4.1",
-		"typescript": "^5"
+		"typescript": "^5",
+		"typescript-eslint": "^8.22.0"
 	}
 }
