--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@neondatabase/serverless": "^0.10.4",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"dotenv": "^16.4.7",
+		"drizzle-orm": "^0.39.1",
 		"lucide-react": "^0.474.0",
 		"next": "15.1.6",
 		"react": "^19.0.0",
@@ -23,6 +26,7 @@
 		"@types/node": "^20.17.16",
 		"@types/react": "^19.0.8",
 		"@types/react-dom": "^19.0.3",
+		"drizzle-kit": "^0.30.4",
 		"eslint": "^9.19.0",
 		"eslint-config-next": "15.1.6",
 		"eslint-config-prettier": "^10.0.1",
