--- a/package.json
+++ b/package.json
@@ -10,19 +10,25 @@
 	},
 	"dependencies": {
 		"@neondatabase/serverless": "^0.10.4",
+		"@radix-ui/react-label": "^2.1.1",
+		"@radix-ui/react-slot": "^1.1.1",
+		"bcrypt": "^5.1.1",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"dotenv": "^16.4.7",
 		"drizzle-orm": "^0.39.1",
+		"jose": "^5.9.6",
 		"lucide-react": "^0.474.0",
 		"next": "15.1.6",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"tailwind-merge": "^3.0.1",
-		"tailwindcss-animate": "^1.0.7"
+		"tailwindcss-animate": "^1.0.7",
+		"zod": "^3.24.1"
 	},
 	"devDependencies": {
 		"@eslint/eslintrc": "^3.2.0",
+		"@types/bcrypt": "^5.0.2",
 		"@types/node": "^20.17.16",
 		"@types/react": "^19.0.8",
 		"@types/react-dom": "^19.0.3",
