--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
 		"eslint": "^9.19.0",
 		"eslint-config-next": "15.1.6",
 		"eslint-config-prettier": "^10.0.1",
+		"eslint-plugin-react": "^7.37.4",
+		"eslint-plugin-react-hooks": "canary",
 		"eslint-plugin-tailwindcss": "^3.18.0",
 		"postcss": "^8.5.1",
 		"prettier-plugin-tailwindcss": "^0.6.11",
